--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/core": "^7.12.10",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^5.1.2",
+    "dotenv-webpack": "^6.0.0",
     "html-webpack-plugin": "^4.5.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
