--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "spa_covid",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode production",
+    "build-dev": "webpack",
+    "build-prod": "webpack --config ./webpack.config-prod",
     "start": "webpack-dev-server --open --mode development"
   },
   "author": "cristian perez",
